<resources>
    <string name="app_name">Clover Example Go</string>

    <string name="accept">Accept</string>
    <string name="authorized">AUTHORIZED</string>
    <string name="cancel">Cancel</string>
    <string name="capture_card">Capture Card</string>
    <string name="card_exp_date_placeholder">12/22</string>
    <string name="card_first_six_placeholder">234567</string>
    <string name="card_last_four_placeholder">4567</string>
    <string name="card_middle_placeholder">xxxxxx</string>
    <string name="card_number_placeholder">XXXXXXXXXXXXXXXXX</string>
    <string name="cards">Cards</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="checking_kiosk">Checking for kiosk application...</string>
    <string name="chip">Chip</string>
    <string name="closeout_orders">Closeout Orders</string>
    <string name="connect">Connect</string>
    <string name="contactless">Contactless</string>
    <string name="current_order">Current Order:</string>
    <string name="custom_activities">Custom Activities</string>
    <string name="_default">Default</string>
    <string name="device_endpoint_settings_label">Device Endpoint</string>
    <string name="disable_device_printing">Disable Device Printing</string>
    <string name="disable_device_receipt_options">Disable Device Receipt Options Screen</string>
    <string name="device_status">Device Status: </string>
    <string name="disable_duplicate_payment_checking">Disable Duplicate Payment Checking</string>
    <string name="disconnected">Disconnected</string>
    <string name="discounts">Discounts:</string>
    <string name="external_id_placeholder">ABC123DEF456G</string>
    <string name="force_offline_payment">Force Offline Payment</string>
    <string name="get_device_status">Get Device Status</string>
    <string name="get_device_status_resend">Get Device Status (Resend)</string>
    <string name="hello_message">Hello Message!</string>
    <string name="header_title">Configuration</string>
    <string name="header_summary">Configure the adapter protocol and port.</string>
    <string name="item_name">Item Name</string>
    <string name="item_cost_placeholder">$3.99</string>
    <string name="item_title_placeholder">Medium Fountain Drink</string>
    <string name="kiosk_not_installed">Please install the kiosk application</string>
    <string name="lan_pay_address">wss://192.168.1.101:12345/remote_pay</string>
    <string name="lan_pay_display">Network Clover Connector</string>
    <string name="native_display">Native App Integration</string>
    <string name="lan_terminal_notification_text">Tap to start Local Network Pay Display.</string>
    <string name="lan_terminal_notification_title">Web Socket payment device connected</string>
    <string name="low_storage_error">Device is low on storage space</string>
    <string name="manual">Manual</string>
    <string name="misc">Misc.</string>
    <string name="_new">New</string>
    <string name="no">No</string>
    <string name="no_discount">No Discount</string>
    <string name="non_blocking">Non-Blocking</string>
    <string name="ok">Ok</string>
    <string name="one">1</string>
    <string name="open_cash_drawer">Open Cash Drawer</string>
    <string name="order_amount_placeholder">$0.00</string>
    <string name="order_id_placeholder">IDxxxx</string>
    <string name="order_date_placeholder">Jan. 3, 2016</string>
    <string name="orders">Orders</string>
    <string name="orders_total_placeholder">$0000000.00</string>
    <string name="payload_placeholder">{&quot;name&quot;:&quot;Bob&quot;}</string>
    <string name="payment_example">$999.99</string>
    <string name="payment_example_smaller">$99.99</string>
    <string name="payment_id">PaymentID</string>
    <string name="payment_id_example">JANRZXDFTF3JF</string>
    <string name="pending">Pending</string>
    <string name="preauth">PreAuth</string>
    <string name="pref_default_protocol">ws</string>
    <string name="pref_label_server">Device Endpoint</string>
    <string name="pref_title_protocol">Protocol</string>
    <string name="preferences_title">Preferences</string>
    <string name="print_image">Print Image</string>
    <string name="print_text">Print Text</string>
    <string name="print_this">Print This!!!!!</string>
    <string name="query_payment">Query Payment</string>
    <string name="read_card_data">Read Card Data</string>
    <string name="refund">Refund</string>
    <string name="refund_amount_placeholder">$23.56</string>
    <string name="refund_date_placeholder">Jan 3, 2016</string>
    <string name="register">Register</string>
    <string name="reject">Reject</string>
    <string name="reset_device">Reset Device</string>
    <string name="sale">Sale</string>
    <string name="sale_tip_amount">Sale Tip Amount</string>
    <string name="scan_qr_code">Scan QRCode</string>
    <string name="send_message">Send Message</string>
    <string name="show_message">Show Message</string>
    <string name="show_thank_you">Show Thank You</string>
    <string name="show_welcome_message">Show Welcome Message</string>
    <string name="signature_entry_location">Signature Entry Location</string>
    <string name="signature_threshold">Signature Threshold</string>
    <string name="start">Start</string>
    <string name="status">STATUS</string>
    <string name="subtotal">Subtotal:</string>
    <string name="swipe">Swipe</string>
    <string name="tax">Tax:</string>
    <string name="test">Test</string>
    <string name="tip">Tip:</string>
    <string name="tip_adjust">Tip Adjust</string>
    <string name="tip_mode">Tip Mode</string>
    <string name="transaction_settings">Transaction Settings</string>
    <string name="yes">Yes</string>
    <string name="partial_auth_error_lbl">Partially Approved</string>

    <string name="signature_text">Sign to approve payment</string>

    <string name="send_receipt_info_lbl">Send receipt to a mobile number or email address</string>
    <string name="send_receipt_btn_lbl">Send Receipt</string>
    <string name="no_receipt_btn_lbl">No Receipt</string>

    <string name="filter_number">12345 67890</string>

    <string name="payment_confirmation">Payment Confirmation</string>

    <!-- Payment Types Fragment -->
    <string name="select_payment_type">Select Payment Type</string>
    <string name="payment_type_rp450">RP450 (Bluetooth)</string>
    <string name="payment_type_rp350">RP350 (Audio Jack)</string>
    <string name="payment_type_key_enter">Key Enter (Manual)</string>
    <string name="partial_refund_title">Partial Refund</string>
    <string name="order_id_with_amount">Order ID: %1$s</string>
    <string name="payment_id_with_amount">Payment ID: %1$s</string>
    <string name="external_payment_id_with_amount">External Payment ID: %1$s</string>
    <string name="amount_placeholder">$%1$s</string>
    <string name="offline_total_amount_placeholder">Total Amount: $%1$s</string>
    <string name="offline_total_days_placeholder">Total Days in Offline: %1$s</string>
    <string name="offline_total_transactions_placeholder">Total Transactions: %1$s</string>
    <string name="pre_authorized">Pre-Authorized</string>
    <string name="pre_authorizations">Pre Authorizations</string>

    <string name="offline_transaction_info">No offline transactions to display</string>
    <string name="amount_title">Amount :</string>
    <string name="payment_id_title">Payment Id :</string>
    <string name="created_title">Created :</string>
    <string name="payment_id_sample">PP2A9VBMD5MQ4</string>
    <string name="sample_date">01-08-2018, 11:46:26</string>
    <string name="state_title">State :</string>
    <string name="fetching_offline_transactions_title">Fetching Offline Transactions</string>
    <string name="please_wait_info">Please wait..</string>
    <string name="processing_offline_transactions_title">Processing Offline Transactions</string>
    <string name="voiding_transaction_title">Voiding Transaction</string>
    <string name="void_transaction_warning">Void Transaction</string>
    <string name="void_transaction_warning_msg">Are you sure you want to continue with it?</string>
    <string name="internet_connectivity_warn">Please Check for Internet Connectivity</string>
    <string name="payment_note_title">Payment Note:</string>
    <string name="payment_note_hint">Sample Payment Note (Optional)</string>
    <string name="invoice_note_title">Invoice Note:</string>
    <string name="invoice_note_hint">Sample Invoice Note (Optional)</string>
    <string name="offline_transaction_lbl">Save Offline Transaction</string>
    <string name="tip_adjust_hint">Enter amount in cents</string>

    <!-- Action titles for bottom navigation -->
    <string name="action_register_title">Register</string>
    <string name="action_orders_title">Orders</string>
    <string name="action_misc_title">Misc</string>
    <string name="action_manual_refund_title">Refund</string>
    <string name="action_vault_card_title">Cards</string>
    <string name="vault_card">Vault Card</string>
    <string name="token">Token:</string>
</resources>