<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <TextView
        android:id="@+id/sendReceiptTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="22dp"
        android:text="@string/send_receipt_info_lbl"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="11dp">

        <Button
            android:id="@+id/sendReceiptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:text="@string/send_receipt_btn_lbl"
            android:textColor="#007840" />

        <Button
            android:id="@+id/noReceiptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:text="@string/no_receipt_btn_lbl"
            android:textColor="#F75F60" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="11dp">

        <EditText
            android:id="@+id/sendReceiptPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:hint="Phone number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <EditText
            android:id="@+id/sendReceiptEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
    </LinearLayout>
</RelativeLayout>